# agent-orchestration-course-t6

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  pyproject.toml  replay.py  show_convo.py
.claude/rules/: architecture.md  code-quality.md  configuration-security.md  git-workflow.md  progress-tracking.md
assets/: architecture.md
config/: rl_config.json
docs/: PLAN.md  PRD_actor.md  TODO.md  actor_plan.md  actor_todo.md  cop_thief_balance.md  cost.md  ex06.md
models/: training_log.json
scripts/: __init__.py  openrouter_adapter.py  play.py  server.py  start_local_server.ps1  train.py  train_thief.py
src/actor_t6/: __init__.py  action_space.py  grid_renderer.py  human_player.py  qtable_actor.py  reward.py  state_encoder.py
tests/: __init__.py
tests/integration/: __init__.py  test_self_play.py
tests/unit/: __init__.py  test_action_space.py  test_human_player.py  test_qtable_actor.py  test_reward.py  test_state_encoder.py
